--- a/backend/package.json
+++ b/backend/package.json
@@ -6,6 +6,7 @@
   },
   "dependencies": {
     "@prisma/client": "^6.6.0",
+    "effect": "^3.14.10",
     "hono": "^4.7.7",
     "prisma": "^6.6.0"
   },
