--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,15 @@ services:
     environment:
       - DATABASE_URL=postgresql://user:password@db:5432/playlist_db
 
+  frontend:
+    build: ./wwww
+    ports:
+      - "3000:3000"
+    depends_on:
+      - backend
+    env_file:
+      - ./wwww/.env
+
   db:
     image: postgres:latest
     ports:
