--- a/wwww/package.json
+++ b/wwww/package.json
@@ -4,7 +4,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite --port 3000",
-    "start": "vite --port 3000",
+    "start": "vite --host --port 3000",
     "build": "vite build && tsc",
     "serve": "vite preview",
     "test": "vitest run"
